# zti

./: .gitignore  AGENTS.md  DOCTRINE.md  LICENSE  PRODUCT_BOUNDARIES.md  PROJECT_STATUS.md  PROTOCOL_FAMILY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
dev/: ZTI_WEB_DEV_PLAN.md
dev/site/: build.py
dev/site/_src/assets/: site.css  site.js
dev/site/_src/config/: site.json
dev/site/_src/pages/: index.html
dev/site/_src/pages/adopt/: index.html
dev/site/_src/pages/adopt/demo/: index.html
dev/site/_src/pages/adopt/request-access/: index.html
dev/site/_src/pages/adopt/request-access/success/: index.html
dev/site/_src/pages/core/: index.html
dev/site/_src/partials/: sidebar.html
docs/: ZTI_REPO_AUDIT.md
examples/: 01_basic_chain.py  02_validation_failure.py  03_tamper_detection.py  04_lineage_validation.py
ops/: deploy.env.example  deploy.sh  play-demo.sh  record-demo.sh  render-demo.sh  verify-demo.sh  verify.sh
resources/demo/: demo.sha256  generate.py  recording-script.md  script.md  session_model.py  terminal-output.md  zti-demo.cast
resources/intake/: zti-demo-workflow.json
schemas/: audit_report.json  verification_trace.json
site/: .htaccess  index.html
site/adopt/: index.html
site/adopt/demo/: index.html
site/adopt/request-access/: index.html
site/adopt/request-access/success/: index.html
site/core/: index.html
tests/: test_demo_runtime.py  test_detection.py  test_integrity.py  test_lineage.py  test_registry.py  test_site_build.py  test_validation.py
whitepaper/: zti-whitepaper.md
zti/: __init__.py  detection.py  errors.py  explainability.py  integrity.py  lineage.py  registry.py  serialization.py  validation.py
zti/demo/: __init__.py  audit.py  cli.py  engine.py  executor.py  export.py  fixtures.py  narrative.py  policy.py
